packages/webassemblyjs/test/fixtures/conversions/type-errors/trunc_u-i64-f32/module.wast
(module (func (result i64) (i64.trunc_u/f32 (i32.const 0))))
